# hydra

./: .hgeol  .hgignore  CMakeLists.txt  LICENSE
daemon/: CMakeLists.txt  daemon.cpp  daemon.hpp  daemon_gui.cpp  daemon_gui.hpp  daemon_main.cpp
daemon/res/: resource.hpp  resource.rc
demos/: CMakeLists.txt  CMakeLists.txt.orig  angles_to_quaternion.cpp  build_defines_template.hpp  fake_tracking_server.cpp  hydra.cpp  hydra.cpp.rej  listening_client.cpp  remote_launcher.cpp  remote_launcher.hpp  remote_launcher_app.cpp  remote_launcher_gui.hpp  timer.hpp  timestamp_client.cpp  timestamp_server.cpp  vrpn_analog_server.cpp  vrpn_tracker_recorder.cpp
demos/res/: remote_launcher.rc  resource.rc
demos/system_tools/: message_box.hpp
pyogre/: CMakeLists.txt  mesh_writer.cpp  mesh_writer.hpp  ogre_python.cpp
qtlauncher/: CMakeLists.txt  envcontrol.cpp  envcontrol.h  envcontrol.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectcontrol.cpp  projectcontrol.h  projpage.cpp  projpage.h  projpage.ui
rendering_system/HydraGL/: CMakeLists.txt  LICENSE
test/: CMakeLists.txt  TODO  debug.hpp  fixtures.hpp  ogre_fixtures.hpp  serial_reader.cpp  settings_fixtures.hpp  test_dotscene.cpp  test_env_settings.cpp  test_euler_angles.cpp  test_exceptions.cpp  test_filestring.cpp  test_helpers.hpp  test_prog.cpp  test_project_settings.cpp  test_settings.cpp  test_timer.cpp  test_tracking.cpp  tracking_fixture.hpp
test/dotscene_loader/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  DotSceneLoader.cpp  DotSceneLoader.h  SampleApp.cpp  SampleApp.h
test/eq_cluster/: CMakeLists.txt  eqogre_fixture.hpp  main.cpp  test_channel.cpp  test_config.cpp  test_init_data.cpp  test_window.cpp
test/eq_graph/: CMakeLists.txt  equalizer_fixture.hpp  mock_object.hpp  mock_scene_manager.hpp  mocks.hpp  scenenode_equalizer_fixture.hpp  stub_scene_node.cpp  test_eq_root.cpp  test_eq_scene_manager.cpp  test_eq_scene_node.cpp
test/eq_ogre/: CMakeLists.txt  test_ogre_entity.cpp  test_ogre_root.cpp  test_ogre_scene_node.cpp
test/examples/: CMakeLists.txt  fbo_rendering.cpp  gl_common.hpp  gl_fbo.hpp  nv_copy_image.cpp  nv_swap_sync.cpp  serial_reader.cpp
test/fifo_buffer/: Makefile  fifo_ptr_test.cpp  fifo_test.cpp  fifo_test.hpp
test/gl_tests/: CMakeLists.txt  fbo_rendering.cpp  gl_common.hpp  gl_fbo.hpp  nv_gpu_affinity.cpp  nv_swap_sync.cpp
test/math/: CMakeLists.txt  Makefile  quaternion_test.cpp  test_math.cpp  vector_test.cpp
test/misc/: CMakeLists.txt  python_embedded.cpp  test_arguments.cpp  test_env.cpp
test/spikes/: CMakeLists.txt  NOTES.txt  bullet_spike.cpp  bullet_test.cpp  client_fixtures.hpp  dotscene_helpers.hpp  dotscene_loader.cpp  dotscene_loader_demo.cpp  dotscene_loader_tracking.cpp  eq_test_fixture.hpp  fake_tracking_server.cpp  listening_client.cpp  node_test.cpp  ogre_render.cpp  physics_events.cpp  physics_events.hpp  physics_world.hpp  pipes_test.cpp  python_embedded.cpp  stereo_render.cpp  stereo_render_udp.cpp  test_arguments.cpp  tracking.cpp  udp_renderer.cpp
test/synchronization/: CMakeLists.txt  equalizer_fixture.hpp  scenenode_equalizer_fixture.hpp  sync_eq_scene_node.cpp  sync_fixture.hpp  threaded_test_runner.hpp
test/udp/: CMakeLists.txt  client_main.cpp  ogre_udp.cpp  server_main.cpp  test_ogre_udp.cpp  test_udp.cpp  test_udp_conf_parser.cpp  udp_fixtures.hpp
test/udp_server/: Makefile  udp_server_test.cpp
test/util/: CMakeLists.txt  args.hpp  test_args.cpp  test_fs.cpp
test/vl_dotscene_loader/: CMakeLists.txt  dotscene_loader.cpp  dotscene_loader.hpp  main.cpp
tools/: CMakeLists.txt
tools/blender2ogre/: CMakeLists.txt  README.txt  addon_ogreDotScene.py  io_export_scene_ogre.py  mesh_writer.hpp  ogre_python.cpp
vl/: CMakeLists.txt  action.cpp  action.hpp  actions_misc.cpp  actions_misc.hpp  actions_transform.cpp  actions_transform.hpp  animation.cpp  animation.hpp  application.cpp  application.hpp  arguments.hpp  cad_importer.cpp  cad_importer.hpp  camera.cpp  camera.hpp  channel.cpp  channel.hpp  channel_deferred.cpp  channel_deferred.hpp  channel_fbo.cpp  channel_fbo.hpp  config.cpp  config.hpp  constraint_solver.cpp  constraint_solver.hpp  constraints.cpp  constraints.hpp  constraints_handlers.cpp  constraints_handlers.hpp  defines.hpp  distrib_resource_manager.cpp  distrib_resource_manager.hpp  distrib_settings.cpp  distrib_settings.hpp  distributed.hpp  dotscene_loader.cpp  dotscene_loader.hpp  entity.cpp  entity.hpp  (+116 more)
vl/animation/: animation.cpp  animation.hpp  constraints.cpp  constraints.hpp  constraints_handlers.cpp  constraints_handlers.hpp  kinematic_body.cpp  kinematic_body.hpp  kinematic_world.cpp  kinematic_world.hpp
vl/base/: args.cpp  args.hpp  chrono.cpp  chrono.hpp  config.cpp  config.hpp  envsettings.cpp  envsettings.hpp  exceptions.hpp  filestringer.hpp  filesystem.cpp  filesystem.hpp  helpers.hpp  message.hpp  print.hpp  projsettings.cpp  projsettings.hpp  rect.hpp  report.hpp  serial.cpp  serial.hpp  sleep.hpp  state_machines.hpp  string_utils.cpp  string_utils.hpp  system_util.cpp  system_util.hpp  thread.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  typedefs.hpp  wall.hpp  xml_helpers.cpp  xml_helpers.hpp
vl/cluster/: client.cpp  client.hpp  distributed.hpp  message.cpp  message.hpp  object_types.hpp  server.cpp  server.hpp  session.hpp  states.hpp
vl/collada/: dae_common.hpp  dae_exporter.cpp  dae_exporter.hpp  dae_importer.cpp  dae_importer.hpp  dae_mesh_importer.cpp  dae_mesh_importer.hpp
vl/eqOgre/: message.hpp
vl/eq_cluster/: action.hpp  aglWindow.hpp  application.cpp  application.hpp  channel.cpp  channel.hpp  client.cpp  client.hpp  config.cpp  config.hpp  config_events.cpp  config_events.hpp  config_python.hpp  dotscene_loader.cpp  dotscene_loader.hpp  eq_resource.cpp  eq_resource.hpp  eq_resource_manager.cpp  eq_resource_manager.hpp  eq_settings.cpp  eq_settings.hpp  event.cpp  event.hpp  event_manager.cpp  event_manager.hpp  frame_data.cpp  frame_data.hpp  frame_data_events.cpp  frame_data_events.hpp  glWindow.hpp  glxPipe.hpp  glxWindow.cpp  glxWindow.hpp  gui.hpp  init_data.cpp  (+23 more)
(+733 files in other folders)
